--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ main {
   max-width: 425px;
 }
 
-.pokemon__image {
+.pokemon_image {
   position: absolute;
   bottom: 55%;
   left: 50%;
@@ -33,7 +33,7 @@ main {
   height: 18%;
 }
 
-.pokemon__data {
+.pokemon_data {
   position: absolute;
   font-weight: 600;
   color: #aaa;
@@ -42,7 +42,7 @@ main {
   font-size: clamp(8px, 5vw, 25px);
 }
 
-.pokemon__name {
+.pokemon_name {
   color: #3a444d;
   text-transform: capitalize;
 }
@@ -54,41 +54,14 @@ main {
   left: 13.5%;
 }
 
-.input__search {
+.input_search {
   width: 100%;
-  padding: 4%;
+  padding: 3%;
   outline: none;
   border: 2px solid #333;
   border-radius: 5px;
   font-weight: 600;
   color: #3a444d;
   font-size: clamp(8px, 5vw, 1rem);
-  box-shadow: -3px 4px 0 #888, -5px 7px 0 #333
-}
-
-.buttons {
-  position: absolute;
-  bottom: 10%;
-  left: 50%;
-  width: 65%;
-  transform: translate(-57%, 0);
-  display: flex;
-  gap: 20px;
-}
-
-.button {
-  width: 50%;
-  padding: 4%;
-  border: 2px solid #000;
-  border-radius: 5px;
-  font-size: clamp(8px, 5vw, 1rem);
-  font-weight: 600;
-  color: white;
-  background-color: #444;
-  box-shadow: -2px 3px 0 #222, -4px 6px 0 #000;
-}
-
-.button:active {
-  box-shadow: inset -4px 4px 0 #222;
-  font-size: 0.9rem;
+  box-shadow: -3px 3px 0 #888, -5px 5px 0 #333;
 }
