--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,29 @@ main {
   font-size: clamp(8px, 5vw, 1rem);
   box-shadow: -3px 3px 0 #888, -5px 5px 0 #333;
 }
+
+.buttons {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  width: 65%;
+  transform: translate(-57%, 0%);
+  display: flex;
+  gap: 5%;
+}
+
+.button {
+  width: 50%;
+  padding: 4%;
+  border: 2px solid #333;
+  border-radius: 5px;
+  box-shadow: -3px 3px 0 #888, -5px 5px 0 #333;
+  color: #333;
+  font-size: clamp(8px, 5vw, 1rem);
+  font-weight: 600;
+}
+
+.button:active {
+  box-shadow: inset -3px 3px 0 #888, inset -5px 5px 0 #333;
+  font-size: 0.95rem;
+}
